force-app/main/default/objects/NC_Section_Publish__e/NC_Section_Publish__e.object-meta.xml
<CustomObject>
    <label>NC Section Publish</label>
    <pluralLabel>NC Section Publishes</pluralLabel>
</CustomObject>