force-app/main/default/objects/NC_Section_Publish__e/fields/Cross_Listed_Course__c.field-meta.xml
<CustomField>
    <fullName>Cross_Listed_Course__c</fullName>
    <description>Course Code that this section is cross listed with.</description>
    <label>Cross Listed Course</label>
    <length>32</length>
    <type>Text</type>
</CustomField>