force-app/main/default/objects/NC_Section_Publish__e/fields/Faculty_ID__c.field-meta.xml
<CustomField>
    <fullName>Faculty_ID__c</fullName>
    <label>Faculty ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>