force-app/main/default/objects/NC_Section_Publish__e/fields/Requires_Canvas__c.field-meta.xml
<CustomField>
    <fullName>Requires_Canvas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Canvas</label>
    <type>Checkbox</type>
</CustomField>