force-app/main/default/objects/NC_Section_Publish__e/fields/Section_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_Number__c</fullName>
    <label>Section Number</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>