force-app/main/default/objects/NC_Section_Publish__e/fields/Section_Reference__c.field-meta.xml
<CustomField>
    <fullName>Section_Reference__c</fullName>
    <label>Section Reference</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>