force-app/main/default/objects/NC_Section_Publish__e/fields/Subledger__c.field-meta.xml
<CustomField>
    <fullName>Subledger__c</fullName>
    <label>Subledger</label>
    <length>80</length>
    <type>Text</type>
</CustomField>